# multiplexor

./: .gitignore  LICENSE  README.md  config.example.yaml  multiplexor  pyproject.toml  test_launch.sh
docs/: README.md  configuration.md  publishing.md  security.md  usage.md
lib/: README.md  config.sh  doctor.sh  explain.sh  help.sh  launch.sh  list.sh  providers.sh  utils.sh
multiplexor/: README.md  __init__.py  cli.py  config.example.yaml  config.py  providers.py  router.py  runner.py  state.py
src/multiplexor/: __main__.py
src/multiplexor/data/: config.example.yaml  multiplexor
src/multiplexor/data/lib/: config.sh  doctor.sh  explain.sh  launch.sh  list.sh
tests/: README.md  fake_config.yaml  test_cli.py  test_config.py  test_next_provider.py  test_router.py  test_runner.py  test_state.py  test_status_json.py
