[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiplexor"
version = "1.0.0"
description = "Local subagent router for AI CLIs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "multiplexor contributors" }
]
keywords = ["ai", "cli", "agent", "llm", "subagents", "gemini", "opencode", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
multiplexor = "multiplexor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["multiplexor*"]

[tool.setuptools.package-data]
multiplexor = ["config.example.yaml"]
