[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name. The plain `multiplexor` was taken by an unrelated
# 2020 websockets package, so we publish as `endy-multiplexor`. The Python
# module is still `import multiplexor`, the CLIs are still `multiplexor`
# and `multiplexor-next-provider` — only `pip install endy-multiplexor`
# is the published shape.
name = "endy-multiplexor"
version = "1.0.0"
description = "Free-tier subagent routing for AI CLIs. The routing policy for endy."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "trentisiete" }
]
keywords = ["ai", "cli", "agent", "llm", "subagents", "endy", "handoff", "gemini", "opencode", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/trentisiete/multiplexor"
Repository = "https://github.com/trentisiete/multiplexor"
Issues = "https://github.com/trentisiete/multiplexor/issues"
"Paired-with" = "https://github.com/trentisiete/endy"

[project.scripts]
multiplexor = "multiplexor.cli:main"
multiplexor-next-provider = "multiplexor.cli:next_provider_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["multiplexor*"]

[tool.setuptools.package-data]
multiplexor = ["config.example.yaml"]
